kselftests: Enable building ktf
Signed-off-by: Knut Omang <knut.omang@oracle.com>

--- a/tools/testing/selftests/Makefile
+++ b/tools/testing/selftests/Makefile
@@ -20,6 +20,7 @@ TARGETS += ipc
 TARGETS += ir
 TARGETS += kcmp
 TARGETS += kexec
+TARGETS += ktf
 TARGETS += kvm
 TARGETS += lib
 TARGETS += livepatch
